Added assembly creation

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,14 @@ go:
 - 1.1
 - 1.2
 - tip
-
-# travis encrypt [subdomain]:[api token]@[room id]
 notifications:
   email: false
   campfire:
     rooms:
-      secure: "P9z4l2QY/L/yBqjNJQr13DHFzG8IYNHn2zk21FF5wMn07hcIcBC8vGv+rLHXMt7TiuVB8oMWJIRt0f23HeXobfd1qd0e00L/n/2gFcii8WNoReyKA4ROQiYErt0Ry70I32vIen9T6RtD5meARqqmZK/QnMhrKGKcGzfLI6paUwM="
+      secure: P9z4l2QY/L/yBqjNJQr13DHFzG8IYNHn2zk21FF5wMn07hcIcBC8vGv+rLHXMt7TiuVB8oMWJIRt0f23HeXobfd1qd0e00L/n/2gFcii8WNoReyKA4ROQiYErt0Ry70I32vIen9T6RtD5meARqqmZK/QnMhrKGKcGzfLI6paUwM=
     on_failure: always
     on_success: always
+env:
+  global:
+  - secure: RlcL7can+9hEODLqSO2hFgCJbmDgj8w8Jjrxl8qDYUxseglz/7rvjW8olWXLnTQXZI1i2j1Nl6jkLvjkveDJSxgA76DkK6wf0JzdcPgL4sSuEfCk7MK8WxG+CdNOgK9yeYkGq5GVNW01DBHy7/ecFm5avjKI/z5QBnAhxqvV6gc=
+  - secure: WPhffcHui8ai8eCuR/J2eVnKK2zHnAv3ToVWRaAfW6FuF3L9/fe9ZxDLJtw+1un3I7WXgJaiRvXq+3S1KcWw6nJOgpi9AOp2So6PWDmSTVsVDyksRXOes4pMIhtB80918flm5C0puld88Hlqllfu4sm88eiAGuFDM4H9pmVw8xE=
