--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,13 @@ go:
 matrix:
   allow_failures:
     - go: tip
+
+# travis encrypt [subdomain]:[api token]@[room id]
 notifications:
   email: false
   campfire:
     rooms:
-      secure: P9z4l2QY/L/yBqjNJQr13DHFzG8IYNHn2zk21FF5wMn07hcIcBC8vGv+rLHXMt7TiuVB8oMWJIRt0f23HeXobfd1qd0e00L/n/2gFcii8WNoReyKA4ROQiYErt0Ry70I32vIen9T6RtD5meARqqmZK/QnMhrKGKcGzfLI6paUwM=
+      secure: "K2tOFDdQSsC1Skg9No6SvMZJenqwYga8H/0viUo6LjJBSSpjJ1a+8a2dDrxVFNaLIJD12mbAp+VHIpI1QLHpayjwdeWI+olnPIcpnywjzreIfM9WNr5AWu5t3O34ySUoGySrto/3H0nPW9nOuQpIy5k23vk8nXor+GgXJw5KD1Y="
     on_failure: always
     on_success: always
 env:
