--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,13 @@ matrix:
   allow_failures:
     - go: tip
 
+before_install:
+- go get github.com/axw/gocov/gocov
+- go get github.com/mattn/goveralls
+- go get code.google.com/p/go.tools/cmd/cover
+script:
+- $HOME/gopath/bin/goveralls -v -repotoken $COVERALLS_TOKEN
+
 # travis encrypt [subdomain]:[api token]@[room id]
 notifications:
   email: false
@@ -20,3 +27,4 @@ env:
   global:
   - secure: gyhp4hcFDjTlPw2sFv7lK8szAMklF7YE1MOZBuwIfQJBiT2VlQ1IpQe+oC+lcEMdoL9ZomD1BfBQaA1s0QLXkcbHEaB/LCWn5/vLheJgqANJwO4Wllymzcws4+hC0s2xx0E16K8eLkmxA7s+ybwfjZdT+5ZbVc8/wTT/yC5Yfew=
   - secure: jGgQwD5gfeVx6o4k7SJMGJZNkN7KMvYlnclBhzNdEJUtk433T4FfKCt23A/sfCuqtX49EulryKufYwe3gbWpan2nXJny8QdJq7YizdZ5qULcYm0cMqg4u5kuQ2nUwEj94dpWwEn7isLck38+j4jWCtKmeNa3rJfKG4J4r9tjaXA=
+  - secure: wGKrsYBSuI4NhxcveqjQGCuY1Jcrh6iF59FEZS8ipWVSIqp2sMQU3K7LqgeUVnyCqXT0LsuLFMPhKDHc8My+aFno85jrmkJo7+gvBnCQC/f5/7Ee3r4LdEgmv4dIRrsItYir/ez/KIQ2BtynWEdLk8/afgNCOF9IjvtX6XneDYg=
