--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@ _testmain.go
 
 *.exe
 *.test
+
+// Test files
+fixtures/output/resize_0_lol_cat.jpg
+fixtures/output/resize_0_mona_lisa.jpg
+fixtures/input/mona_lisa.jpg
