--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ before_install:
 - go get github.com/axw/gocov/gocov || true
 - go get github.com/mattn/goveralls || true
 - go get code.google.com/p/go.tools/cmd/cover || true
+- go get gopkg.in/fsnotify.v1
 
 script:
 - $HOME/gopath/bin/goveralls -v -repotoken $COVERALLS_TOKEN || make test
