--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,11 @@ bin/
 fixtures/**/*.jpg
 
 debug.sh
+
+fixtures/output/-original_0_sample_iPod.m4v
+
+fixtures/output/-original_0_sample_mpeg4.mp4
+
+fixtures/output/encode_0_sample_iPod.mp4
+
+fixtures/output/encode_0_sample_mpeg4.mp4
