Save builds to S3

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ fixtures/output/-original_0_sample_mpeg4.mp4
 fixtures/output/encode_0_sample_iPod.mp4
 
 fixtures/output/encode_0_sample_mpeg4.mp4
+
+builds/
