--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ before_install:
 - go get github.com/mattn/goveralls || true
 - go get code.google.com/p/go.tools/cmd/cover || true
 - go get gopkg.in/fsnotify.v1
+- go get github.com/mitchellh/go-homedir
 
 script:
 - $HOME/gopath/bin/goveralls -v -repotoken $COVERALLS_TOKEN || make test
