--- a/.gitignore
+++ b/.gitignore
@@ -24,18 +24,10 @@ _testmain.go
 
 bin/
 
-// Test files
-fixtures/**/*.jpg
+# Test files
+fixtures/output/*
 
 debug.sh
-
-fixtures/output/-original_0_sample_iPod.m4v
-
-fixtures/output/-original_0_sample_mpeg4.mp4
-
-fixtures/output/encode_0_sample_iPod.mp4
-
-fixtures/output/encode_0_sample_mpeg4.mp4
 
 builds/
 
