Remove dependency from cover tool
The  command does not recognize code.google.com as an import path anymore.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,8 @@ matrix:
   - go: tip
 sudo: false
 before_install:
-- go get github.com/axw/gocov/gocov || true
-- go get github.com/mattn/goveralls || true
-- go get code.google.com/p/go.tools/cmd/cover || true
+- go get github.com/axw/gocov/gocov
+- go get github.com/mattn/goveralls
 - go get .
 script:
 - $HOME/gopath/bin/goveralls -v -repotoken $COVERALLS_TOKEN || make test
