--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -11,6 +11,7 @@ jobs:
     name: Test on Go ${{ matrix.go_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
+      fail-fast: false
       matrix:
         go_version: ['1.7', '1.8', '1.9', '1.10', '1.11', '1.12', '1.13', '1.14', '1.15', '1.16']
         os: [ubuntu-latest]
