--- a/.github/workflows/testsuite.yml
+++ b/.github/workflows/testsuite.yml
@@ -23,6 +23,9 @@ jobs:
       uses: actions/setup-go@v2
       with:
         go-version: ${{ matrix.go_version }}
+    
+    - name: Install dependencies
+      run: go get .
 
     - name: Test
       run: make test
