--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,3 +29,10 @@ jobs:
       env:
         TRANSLOADIT_KEY: ${{ secrets.TRANSLOADIT_KEY }}
         TRANSLOADIT_SECRET: ${{ secrets.TRANSLOADIT_SECRET }}
+
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        fail_ci_if_error: true
+        files: ./coverage.out
+        token: ${{ secrets.CODECOV_TOKEN }}
